--- a/index.html
+++ b/index.html
@@ -5,9 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock-Paper-Scissors</title>
-    <script src="rock-paper-scissors.js"></script>
+    <link rel="stylesheet" type="text/css" href="rps.css"/> 
+    <script src="rock-paper-scissors.js" defer></script>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="controls">
+            <button class="player rock">Rock</button>
+            <button class="player paper">Paper</button>
+            <button class="player scissors">Scissors</button>
+        </div>
+        <div class="score">
+            <div class="player-score">0</div>
+            <div class="comp-score">0</div>
+        </div>
+        <div class="results">
+        </div>
+    </div>
 </body>
 </html>
